# kokoro

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: kokoro-ads.md  kokoro-audit.md  kokoro-canvas.md  kokoro-connect.md  kokoro-creative-review.md  kokoro-creative.md  kokoro-cuts.md  kokoro-diagnose.md  kokoro-factory.md  kokoro-forces.md  kokoro-funnel.md  kokoro-intel.md  kokoro-landing.md  kokoro-luxury-assess.md  kokoro-luxury-communication.md  kokoro-luxury-experience.md  kokoro-luxury-growth.md  kokoro-luxury-quality.md  kokoro-luxury-scarcity.md  kokoro-luxury.md  kokoro-mountain.md  kokoro-onboard.md  kokoro-open.md  kokoro-pescar.md  kokoro-prune.md  kokoro-render.md  kokoro-rhythm.md  kokoro-update.md  kokoro-validate.md
.claude/knowledge/: kokoro-ads-meta.md  kokoro-analytics-metrics.md  kokoro-connect-platforms.md  kokoro-creative-diversification.md  kokoro-creative-gemini.md  kokoro-cuts-signals.md  kokoro-luxury-layers.md  kokoro-meta-ai-ecosystem.md  kokoro-meta-delivery-system.md  kokoro-metodologia.md  kokoro-onboard-methodology.md  kokoro-phase1-diagnostico.md  kokoro-phase1-vision.md  kokoro-phase2-canvas.md  kokoro-phase2-interviews.md  (+7 more)
dev/: parking-lot.md  pendientes-2026-03-30.md
extension/: README.md  SETUP-CLAUDE-DESKTOP.md
governance/: backlog.md  guardrails.md  prd.md  system-context.md  system-design.md  vision.md
kokoro creativve review/: andromeda.md  creative-diversification.md  gem.md  lattice.md  matriz-diversificacion-creativa.md  sequence-learning.md
tests/: conftest.py  test_canvas.py  test_claude_md.py  test_cli.py  test_client_models.py  test_client_store.py  test_client_sync.py  test_creative_review.py  test_diagnose.py  test_experiment.py  test_factory.py  test_finance.py  test_forces.py  test_funnel.py  test_interviews.py  test_knowledge.py  test_knowledge_phase2.py  test_kokoro_pulse.py  test_kokoro_router.py  test_kokoro_session.py  test_launch.py  test_mafia.py  test_mcp_server.py  test_memory_update.py  test_mountain.py  test_ontology_compat.py  test_ontology_models.py  test_ontology_store.py  test_output_structure.py  test_pescar.py  test_prune.py  test_research.py  test_rhythm.py  test_validate.py  vocabulary_check.py
(+450 files in other folders)
